changed the about me section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="container">
             <h1>Hello World!</h1>
-            <p class="intro"></p>I’m <span id="name">Kudzai</span>, a university student passionate about learning and growing. Let’s connect and explore new opportunities together!</p>
+            <p class="intro"></p>I’m <span id="name">Kudzai</span>, a university student passionate about learning and growing!</p>
         </div>
     </header>
 
@@ -23,8 +23,14 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                I’m currently in my 3rd year of university, studying a BSc, majoring in Computer Science and Computer Engineering at UCT, and I love diving into new challenges. Lately, I’ve been really getting into web development and backend development with Java. Whether it’s figuring out tricky code, solving problems, or coming up with new ideas, I’m always eager to push my skills further. Outside of school, I’m constantly learning! I am currently completing Codecademy’s "Build a Website with HTML, CSS, and GitHub Pages" course, the Intermediate and Advanced Java courses, and I’m currently working through the "Front-end Engineer" career path. I’ve also been exploring Webflow and Figma to sharpen my design skills and stay on top of the latest web design trends.
-            </p>
+                I’m currently in my 3rd year of university, studying a BSc, majoring in <strong>Computer Science and Computer Engineering</strong> at the University of Cape Town. Whether it’s figuring out tricky code, solving problems, or coming up with new ideas, I’m always eager to push my skills further. Outside of school, I’m constantly learning! I am currently completing:</p>
+                <ul>
+                    <li>Codecademy’s "Build a Website with HTML, CSS, and GitHub Pages" course</li>
+                    <li>Codecademy's Intermediate and Advanced Java courses</li>
+                    <li>and I’m currently working through the "Front-end Engineer" career path.</li>
+                </ul>
+            <p>I’ve also been exploring Webflow and Figma to sharpen my design skills and stay on top of the latest web design trends.</p>
+            
         </div>
     </section>
 
