final touches...for now

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li>Codecademy's Intermediate and Advanced Java courses</li>
                     <li>and I’m currently working through the "Front-end Engineer" career path.</li>
                 </ul>
-            <p>I’ve also been exploring Webflow and Figma to sharpen my design skills and stay on top of the latest web design trends.</p>
+            <p>I’ve also been exploring <strong>Webflow</strong> and <strong>Figma</strong> to sharpen my design skills and stay on top of the latest web design trends.</p>
             
         </div>
     </section>
@@ -37,7 +37,7 @@
     <section class="projects">
         <div class="container">
             <h2>What i'm up to...</h2>
-            <p>I’m knee-deep in university studies, but that doesn’t stop me from honing my skills whenever I can. I’m particularly passionate about mastering Java and front-end web development. My GitHub is home to a collection of projects I’ve completed during my rigorous second-year computer science course, and I’m adding more all the time as I take on personal challenges and new learning experiences.
+            <p>I’m currently knee-deep in my university studies, but that doesn’t stop me from honing my skills whenever I can. I’m particularly passionate about mastering Java and front-end web development. My GitHub is home to a collection of projects I’ve completed for my computer science courses, and I’m adding more all the time as I take on personal challenges and new learning experiences.
                 This website is a testament to my journey so far, and I’m excited to continue adding to it as I advance through my courses and projects. Expect to see more as I dive deeper into my studies and put what I’m learning into practice!</p>
             <ul>
                 <li><strong>Check out my Github account</strong> <a href="https://github.com/KudzaiNoku">HERE!</a></li>
